--- a/med-reminder-UI/angular.json
+++ b/med-reminder-UI/angular.json
@@ -14,7 +14,8 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "allowedCommonJsDependencies": [
-              "lodash"
+              "lodash",
+              "opentelemetry"
            ],
             "outputPath": "dist/med-reminder-ui",
             "index": "src/index.html",
