--- a/med-reminder-UI/package.json
+++ b/med-reminder-UI/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "crypto-browserify": "^3.12.0",
+    "crypto-random-string": "^5.0.0",
     "font-awesome": "^4.7.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
