--- a/med-reminder-UI/package.json
+++ b/med-reminder-UI/package.json
@@ -19,14 +19,19 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@dhutaryan/ngx-mat-timepicker": "^16.0.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "angular-confirmation-popover": "^7.0.0",
     "assert": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
     "crypto-random-string": "^5.0.0",
     "font-awesome": "^4.7.0",
     "https-browserify": "^1.0.0",
+    "ng-confirm-box": "^0.1.1",
+    "ngx-material-timepicker": "^13.1.1",
     "os-browserify": "^0.3.0",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
@@ -36,7 +41,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.0",
-    "@angular/cli": "~16.0.0",
+    "@angular/cli": "^16.2.4",
     "@angular/compiler-cli": "^16.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~4.3.0",
