--- a/med-reminder-UI/tsconfig.json
+++ b/med-reminder-UI/tsconfig.json
@@ -37,5 +37,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "types": [
+    "ngx-material-timepicker",
+  ],
+  
 }
